test/error/invalid-struct-field.dsk
let S = struct
    a: int
let s = S(a = 1)
echo(s.b)
